@@ -1,6 +1,6 @@
 [Desktop Entry]
-_Name=LocaleDrake (System)
-_Comment=System wide language configurator
+_Name=System Regional Settings
+_Comment=System wide language & country configurator
 Exec=/usr/bin/drakconf --start-with=Localization
 Icon=localedrake
 Type=Application
