@@ -1,6 +1,6 @@
 [Desktop Entry]
-_Name=LocaleDrake (User)
-_Comment=Language configurator
+_Name=Regional Settings
+_Comment=Language & country configuration
 Exec=/usr/bin/localedrake
 Icon=localedrake
 Type=Application
