@@ -1,3 +1,6 @@
+- localedrake menu entries:
+  o make them more understandable (#32941)
+
 Version 10.4.200 - 17 September 2007, by Thierry Vignaud
 
 - only run "chksession -l" if needed
